--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "axum-hello-world"
+name = "api_mongo_swbox"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,3 +8,6 @@ axum = "0.8"
 shuttle-axum = "0.57.0"
 shuttle-runtime = "0.57.0"
 tokio = "1.28.2"
+mongodb = "3.3.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
