--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ tokio = "1.28.2"
 mongodb = "3.3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tower-http = { version = "0.6.6", features = ["cors"] }
