--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ mongodb = "3.3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tower-http = { version = "0.6.6", features = ["cors"] }
+chrono = "0.4.42"
