--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.8"
-shuttle-axum = "0.57.0"
-shuttle-runtime = "0.57.0"
-tokio = "1.28.2"
-mongodb = "3.3.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-tower-http = { version = "0.6.6", features = ["cors"] }
+axum = "0.8.7"
+tokio = { version = "1.48.0", features = ["full"] }
+mongodb = "3.4.1"
+
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+serde_urlencoded = "0.7.1"
+
+tower-http = { version = "0.6.8", features = ["cors", "limit"] }
+chrono = "0.4.42"
+
+dotenvy = "0.15.7"
